2003-08-22 19:00  kbs
	* Added some notes to the build/install section of README
	
	* Updated LICENSE to make it clear that wxRuby is not wxWindows
	
	* Added COPYING.LIB as required by LICENSE
	

2003-08-22 18:00  kbs
	* Modified wxpp.rb to eliminate dozens of compiler warnings about 
	possibly uninitialized variables, and unused variables. Some 
	warnings may remain. I would have eliminted them earlier, but my 
	compiler only started complaining a couple weeks ago.
	

2003-08-22 17:30  kbs
	* Updated README and created several platform-specific README.xxx files
	

2003-08-12 07:00  kbs
	* Oops! Really checked extconf.rb as described below. Obviously I need
	to improve my process!
	

2003-08-11 09:00  kbs
	* Oops. Really checked in the app.cpp #include change. Yesterday the 
	checkin failed due to a temporary Savannah problem, but I didn't 
	notice the error output.
	
	* Modified extconf.rb MinGW section to avoid using backticks
	

2003-08-10 09:30  kbs
	* Added BSD to extconf.rb
	
	* Now include sys/time.h in app.cpp
	
	* Modified install.rb to refer to wxruby.so instead of wx.so
	

2003-07-22 19:40  kbs
	* Minor change to extconf.rb for MinGW support
	
	* Renamed 'depends' to 'depend' so it will automatically 
	depend on .obj files under MSW
	
	* Added some missing dependencies in depend
	
	* Removed fontdialog.o from OS X build, since it causes compile 
	errors. We need to fix them and add it back in later.
	
	* Minor updates to the README file.


2003-07-17 20:15  kbs
	* Update extconf.rb to avoid inserting CR's in the makefile 
	under MSW.
	

2003-07-11 08:30  kbs
	* Checked in 'nothing.rb' (oops)
	
	* Fixed extconf.rb to handle .t dependencies correctly, which 
	was broken yesterday.
	
	* Updated MinGW settings in extconf.rb to be more like Linux
	

2003-07-10 19:00  kbs
	* Remove evt_menu debugging, since the problem has been fixed.
	
	* Fixed event handlers to work with MSW and OS X, by cleaning 
	up how the block/proc is handled.
	